using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string Walk = "speed";
    public const string Jumping_Bool = "jump";
    public const string Pukul_Trigger = "pukul";
    public const string Ulti_Trigger = "ulti";
    public const string Senjata_Trigger = "senjata";
    public const string Defense_Bool = "defense";
    public const string Hurt_Trigger = "hurt";
    public const string Die_Bool = "die";
}
public class Axis
{
    public const string Horizontal_Axis = "Horizontal";
}
public class Tags
{
    public const string Player_Tags = "Player";
    public const string Enemy_Tags = "Enemy";
    public const string Ground = "Ground";
    public const string Pukul_Attack_Tag = "PukulAttack";
    public const string Senjata_Attack_Tag = "SenjataAttack";
    public const string Player_Health_Bar = "PlayerHealthBar";
    public const string Enemy_Health_Bar = "EnemyHealthBar";
    public const string Ulti = "Ulti";
    public const string Player_Mana_Bar = "PlayerManaBar";
    public const string Enemy_Mana_Bar = "EnemyManaBar";
}